--- a/Pastures/Views/Maps/PasturesBurden.cshtml
+++ b/Pastures/Views/Maps/PasturesBurden.cshtml
@@ -1207,7 +1207,6 @@
             Source_found_burden_pasture.addFeature(feature);
             count++;
         }
-        //alert(count);
     };
 
     // маска поиска пастбищ
@@ -1438,9 +1437,7 @@
 
         view = new ol.View({
             projection: 'EPSG:3857',
-            center: [7447522, 6202316],
-            zoom: map.getView().fit([5175092, 7455797, 9719952, 4948835], map.getSize()).getZoom(),
-            minZoom: map.getView().fit([5175092, 7455797, 9719952, 4948835], map.getSize()).getZoom()
+            center: [7447522, 6202316]
         });
         map.setView(view);
 
