--- a/Pastures/Views/Maps/Wells.cshtml
+++ b/Pastures/Views/Maps/Wells.cshtml
@@ -1584,9 +1584,7 @@
 
         view = new ol.View({
             projection: 'EPSG:3857',
-            center: [7447522, 6202316],
-            zoom: map.getView().fit([5175092, 7455797, 9719952, 4948835], map.getSize()).getZoom(),
-            minZoom: map.getView().fit([5175092, 7455797, 9719952, 4948835], map.getSize()).getZoom()
+            center: [7447522, 6202316]
         });
         map.setView(view);
 
